--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="230dp"
     android:gravity="bottom"
     android:padding="16dp"
     android:background="@drawable/headerbkg"
+    tools:context=".Student.NavHeader"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
@@ -18,6 +21,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/txtName"
+
         android:text="Anas Al Sayed"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -26,6 +31,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/txtEmail"
+
         android:text="anasalsayed14@gmail.com"
         android:textColor="@color/white"
         android:textSize="14sp"
