--- a/app/src/main/res/layout/fragment_student_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_student_leaderboard.xml
@@ -16,25 +16,23 @@
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="108dp"
         android:fontFamily="@font/inknut_antiqua_light"
         android:text="Leaderboard"
         android:textColor="#800000"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/spnSubject"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toEndOf="@+id/imgLraderboard"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imgLraderboard"
         android:layout_width="41dp"
         android:layout_height="38dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="92dp"
         android:src="@drawable/leaderboard2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,32 +41,32 @@
         android:id="@+id/spnSubject"
         android:layout_width="373dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/search_background"
         android:fontFamily="@font/inknut_antiqua"
         android:hint="Select Subject"
         android:padding="8dp"
         android:spinnerMode="dropdown"
         android:textColor="#000"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.631"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLraderboard"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="383dp"
         android:layout_height="324dp"
         android:layout_marginBottom="204dp"
-        android:background="@drawable/search_background"
 
+        android:background="@drawable/search_background"
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.678"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spnSubject"
+        app:layout_constraintVertical_bias="1.0">
 
         <!-- First Place Card -->
         <androidx.cardview.widget.CardView
