--- a/app/src/main/res/layout/fragment_student_notification.xml
+++ b/app/src/main/res/layout/fragment_student_notification.xml
@@ -69,27 +69,36 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <RadioButton
-                android:id="@+id/rbAscending"
+            <RadioGroup
+                android:id="@+id/rgFilter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/radio_button_color"
-                android:checked="true"
-                android:text="Ascending" />
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center_horizontal">
 
-            <RadioButton
-                android:id="@+id/rbDescending"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:buttonTint="@color/radio_button_color"
-                android:text="Descending" />
+                <RadioButton
+                    android:id="@+id/rbAscending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ascending"
+                    />
 
-            <RadioButton
-                android:id="@+id/rbUnread"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:buttonTint="@color/radio_button_color"
-                android:text="Unread" />
+                <RadioButton
+                    android:id="@+id/rbDescending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Descending"
+                     />
+
+                <RadioButton
+                    android:id="@+id/rbUnread"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Unread"
+                     />
+            </RadioGroup>
+
         </LinearLayout>
     </LinearLayout>
 
