--- a/app/src/main/res/layout/fragment_teacher_notification.xml
+++ b/app/src/main/res/layout/fragment_teacher_notification.xml
@@ -61,19 +61,16 @@
             android:fontFamily="@font/alatsi"
             android:textColor="#800000" />
 
-        <LinearLayout
-            android:id="@+id/filterButtons"
-            android:layout_width="match_parent"
+        <RadioGroup
+            android:id="@+id/rgFilter"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:gravity="center"
             android:orientation="horizontal">
 
             <RadioButton
                 android:id="@+id/rbAscending"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/radio_button_color"
                 android:checked="true"
                 android:text="Ascending" />
 
@@ -81,16 +78,14 @@
                 android:id="@+id/rbDescending"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/radio_button_color"
                 android:text="Descending" />
 
             <RadioButton
                 android:id="@+id/rbUnread"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/radio_button_color"
                 android:text="Unread" />
-        </LinearLayout>
+        </RadioGroup>
     </LinearLayout>
 
     <!-- Notification List -->
