--- a/app/src/main/res/layout/fragment_student_calendar.xml
+++ b/app/src/main/res/layout/fragment_student_calendar.xml
@@ -19,8 +19,9 @@
     <ListView
         android:id="@+id/lstBooks"
         android:layout_width="376dp"
-        android:layout_height="540dp"
-        android:layout_marginBottom="96dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/search_background"
         android:divider="@android:color/transparent"
         android:dividerHeight="16dp"
@@ -28,7 +29,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.485"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/txtTitle"
