--- a/app/src/main/res/layout/fragment_student_events.xml
+++ b/app/src/main/res/layout/fragment_student_events.xml
@@ -29,7 +29,6 @@
         android:id="@+id/lstBooks"
         android:layout_width="376dp"
         android:layout_height="540dp"
-        android:layout_marginBottom="96dp"
         android:background="@drawable/search_background"
         android:divider="@android:color/transparent"
         android:dividerHeight="16dp"
@@ -37,6 +36,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.542"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
