--- a/app/src/main/res/layout/fragment_student_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_student_leaderboard.xml
@@ -41,7 +41,8 @@
         android:id="@+id/spnSubject"
         android:layout_width="373dp"
         android:layout_height="40dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="152dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/search_background"
         android:fontFamily="@font/inknut_antiqua"
         android:hint="Select Subject"
@@ -50,20 +51,22 @@
         android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="383dp"
-        android:layout_height="324dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="204dp"
+        android:layout_marginTop="16dp"
+
 
         android:background="@drawable/search_background"
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.678"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnSubject"
         app:layout_constraintVertical_bias="1.0">
