--- a/app/src/main/res/layout/list_item_student_assignment.xml
+++ b/app/src/main/res/layout/list_item_student_assignment.xml
@@ -55,6 +55,7 @@
             android:text="Status: Pending"
             android:textSize="14sp" />
         <Button
+            android:id="@+id/btnDownload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Download File"
@@ -65,5 +66,18 @@
             android:fontFamily="@font/aldrich"
             android:textSize="14sp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit Assignment"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="@color/dark_red"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/aldrich"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
     </LinearLayout>
 </LinearLayout>
